--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Sample Form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" crossorigin="anonymous">
     <style>
     body {
